# emelmujiro

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .gitlab-ci.yml  .lintstagedrc.js  .npmrc  .prettierignore  .prettierrc  404.html  CHANGELOG.md  CI-CD-GUIDE.md  CI-CD-README.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  GOOGLE-SEO-GUIDE.md  JOURNAL.md  Jenkinsfile  LICENSE  Makefile  NOTES.md  NOTICE  README.md  SETUP-GUIDE.md  TROUBLESHOOTING.md  UV_GUIDE.md  VITE_MIGRATION.md  _headers  asset-manifest.json  cache-cleanup.js  codecov.yml  cspell.json  docker-compose.dev.yml  docker-compose.yml  index.html  knip.config.ts  manifest.json  manifest.webmanifest  (+14 more)
.claude/: settings.local.json
.claude/rules/: backend.md  frontend.md  strategy.md
.github/: SECRETS-TEMPLATE.md  TODO.md  dependabot.yml  labeler.yml
.github/workflows/: auto-label.yml  build-test.yml  cd-simple.yml  cd.yml  ci-simple.yml  ci.yml  dependabot-auto-merge.yml  dependabot-auto-merge.yml.disabled  deploy-gh-pages.yml  frontend-ci.yml  main-ci-cd.yml  pr-checks.yml  secrets-template.yml  setup-labels.yml  stale.yml  test.yml
.husky/: pre-commit
assets/: AboutPage-B2rgS8HM.js  AboutPage-Bdeniw-t.js  AboutPage-DGDfYQLz.js  AboutPage-DGDfYQLz.js.map  AboutPage-MCMP_jKM.js  AboutPage-MCMP_jKM.js.map  AboutPage-Qr0PNjYy.js  AdminDashboard-B0xj9h3e.js  AdminDashboard-B0xj9h3e.js.map  AdminDashboard-BDWXN5Qo.js  AdminDashboard-C69zhecY.js  AdminDashboard-CkqmajHK.js  AdminDashboard-YBFVjh2w.js  AdminDashboard-YBFVjh2w.js.map  BlogDetail-0NTOq4qu.js  BlogDetail-0NTOq4qu.js.map  BlogDetail-3kl1Mj6W.js  BlogDetail-3kl1Mj6W.js.map  BlogDetail-COAOCFrT.js  BlogDetail-D3ODeyqN.js  BlogDetail-DAA_siYF.js  BlogEditor-BD-R9cry.js  BlogEditor-CYpVfros.js  BlogEditor-CYpVfros.js.map  BlogEditor-KVUhij4k.js  BlogEditor-NMfLOI3T.js  BlogEditor-NMfLOI3T.js.map  BlogEditor-ojwpJ8Yz.js  BlogListPage-BYQGomAe.js  BlogListPage-BYQGomAe.js.map  BlogListPage-BgJ5I9Wj.js  BlogListPage-DCFK_KW6.js  BlogListPage-DCFK_KW6.js.map  BlogListPage-DSUup32p.js  BlogListPage-Zy0v64jx.js  CTASection-7vTkHr-Z.js  CTASection-CSYvRFCR.js  CTASection-CSYvRFCR.js.map  CTASection-DFy6Y8Rl.js  CTASection-DFy6Y8Rl.js.map  (+130 more)
backend/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Dockerfile.dev  README.md  SECURITY.md  create_blog_posts.py  env_example.txt  pyproject.toml  pyrightconfig.json  requirements.txt
backend/api/: admin.py  admin_views.py  auth.py  authentication.py  constants.py  consumers.py  middleware.py  models.py  pagination.py  routing.py  serializers.py  swagger.py  tests.py  tests_urls.py  urls.py  utils.py  validators.py  views.py
backend/api/management/commands/: cleanup_sitevisits.py  create_blog_posts.py  security_check.py
backend/api/migrations/: 0001_initial.py  0002_blogpost_author_blogpost_likes_blogpost_slug_and_more.py  0003_add_blogpost_indexes.py  0004_contact_user_agent_max_length_and_slug_retry.py  0005_remove_blogpost_link_field.py  0006_add_notification_model.py  0007_notificationpreference.py  0008_add_content_html_to_blogpost.py  0009_add_blog_like_comment_models.py  0010_add_ip_address_to_blogcomment.py  0011_bloglike_api_bloglik_ip_addr_5c4b15_idx_and_more.py  0012_contactattempt_failure_count.py
backend/config/: asgi.py  settings.py  urls.py
backend/scripts/: deploy.sh
deploy/kubernetes/: deployment.yaml
deploy/terraform/: main.tf
frontend/: .cssrc.json  .dockerignore  .env.example  .env.production  .eslintrc.json  .gitignore  .lighthouserc.js  .prettierignore  .prettierrc  .stylelintrc.json  CI_STATUS.md  DEPENDENCY_UPDATE_PLAN.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  OPTIMIZATION_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  SEO_AUDIT_REPORT.md  bundle-analysis.json  craco.config.js  env_example.txt  eslint.config.mjs  index.html  lighthouserc.js  nginx.conf  package.json  playwright.config.js  playwright.config.ts  sitemap-generator.js  tailwind.config.js  tsconfig.build.json  tsconfig.ci.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/docs/: COMPONENT_DOCS.md  next-js-migration-analysis.md
frontend/e2e/: about.spec.ts  accessibility.spec.js  accessibility.spec.ts  auth.spec.js  blog.spec.js  blog.spec.ts  contact.spec.js  contact.spec.ts  error-states.spec.ts  homepage.spec.js  homepage.spec.ts  navigation.spec.ts  profile.spec.ts  pwa.spec.js  seo.spec.ts  share.spec.ts
frontend/public/: CNAME  _headers  index.html  manifest.json  offline.html  robots.txt  service-worker-enhanced.js  service-worker.js  sitemap-index.xml  sitemap.xml
frontend/scripts/: check-css.js  generate-og-image.js  generate-sitemap.js  optimize-images.js  prerender.js  remove-console.sh  test-ci-local.sh  (+2 more)
scripts/: auto-deploy.sh  check-i18n-keys.sh  check-ports.sh  check_machine_sync.sh  cleanup-sitevisits.sh  deploy-webhook.js  docker-build.sh  health-check.sh  kill-ports.sh  maintenance-worker.js  ports.sh  pre-deploy-check.sh  setup-dev-machine.sh  start-dev.sh  sync-readme-badges.sh  sync_private.sh  update-test-counts.sh
(+673 files in other folders)
