[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emelmujiro-backend"
version = "0.1.0"
description = "Emelmujiro Backend API"
requires-python = ">=3.10"
dependencies = [
    "Django==5.2.12",
    "djangorestframework==3.16.1",
    "django-cors-headers==4.9.0",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
    "django-extensions==4.1",
    "djangorestframework-simplejwt==5.5.1",
    "ipython==8.37.0",
    "drf-yasg==1.21.15",
    "gunicorn==25.1.0",
    "psycopg2-binary==2.9.10",
    "whitenoise==6.12.0",
    "channels==4.3.1",
    "channels-redis==4.3.0",
    "daphne==4.2.1",
    "redis==7.3.0",
    "PyJWT>=2.12.0",
    "pyopenssl>=26.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "coverage>=7.0.0",
    "flake8>=7.0.0",
]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "config*"]
exclude = ["tests*"]
