[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emelmujiro-backend"
version = "0.1.0"
description = "Emelmujiro Backend API"
requires-python = ">=3.12"
dependencies = [
    "Django==6.0.3",
    "djangorestframework==3.17.1",
    "django-cors-headers==4.9.0",
    "python-dotenv==1.2.2",
    "requests==2.33.0",
    "django-extensions==4.1",
    "djangorestframework-simplejwt==5.5.1",
    "ipython==9.11.0",
    "drf-yasg==1.21.15",
    "gunicorn==25.3.0",
    "psycopg2-binary==2.9.11",
    "whitenoise==6.12.0",
    "PyJWT>=2.12.0",
    "pyopenssl>=26.0.0",
    "pyasn1>=0.6.3",
    "ujson>=5.12.0",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "coverage>=7.0.0",
    "flake8>=7.0.0",
]

[tool.coverage.run]
source = ["api"]
omit = ["api/management/commands/create_blog_posts.py"]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "config*"]
exclude = ["tests*"]
